--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -25,7 +25,9 @@ main{
   --background-main: #F8F8FB;
   --background-secondary: #FFFFFF;
   --text-color: #111517;
+  --text-color-draft: #373B53;
   --dropdown-border: #1115173d;
+  --modal-input-border: #DFE3FA;
 
 }
 
@@ -34,6 +36,9 @@ main{
   --background-secondary: #252945;
   --text-color: #FFFFFF;
   --dropdown-border: #ffffff3d;
+  --text-color-draft: #DFE3FA;
+  --modal-input-border: #dfe3fa00;
+
 
 
 }
@@ -44,6 +49,19 @@ div.App{
   background: var(--background-main);
 }
 
+
+button.default-button {
+  margin-left: 600px;
+  padding: 0 20px 0 20px;
+  font-weight: 600;
+  height: 48px;
+  background-color: black;
+  border: 0;
+  border-radius: 30px;
+  font-size: 16px;
+  cursor: pointer;
+  color: white;
+}
 
 /* *************************************************HOME LAYOUT************************************************* */
 
@@ -175,6 +193,76 @@ div.invoice-item:hover{
   border: 1px solid #7C5DFA;
 
 }
+
+p.invoice-id{
+width: 25%;
+}
+
+p.invoice-client{
+  width: 25%;
+  text-align: left;
+
+}
+
+p.invoice-total{
+  width: 10%;
+  text-align: left;
+}
+
+p.paid__status,
+p.pending__status,
+p.draft__status{
+  width: 110px;
+  text-align: center;
+  text-transform: capitalize;
+  font-size: 18px;
+  font-weight: 600;
+  border-radius: 10px;
+  padding: 12px 15px 12px 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+span.paid__span,
+span.pending__span,
+span.draft__span {
+  height: 10px;
+  width: 10px;
+  display: block;
+  background-color: black;
+  border-radius: 50%;
+  margin-right: 10px;
+
+}
+
+p.paid__status{
+  background-color: #33d6a049;
+  color: #33d6a0;
+}
+
+p.pending__status{
+  background-color: #ff910050;
+  color: #FF8F00;
+}
+
+p.draft__status{
+  background-color: #373b533a;
+  color: var(--text-color-draft);
+}
+
+span.paid__span{
+  background-color: #33d6a0;
+}
+
+span.pending__span{
+  background-color: #FF8F00;
+}
+
+span.draft__span{
+  background-color: var(--text-color-draft);
+}
+
 
 
 /* *************************************************HOME LAYOUT************************************************* */
