--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,6 +9,17 @@
   text-decoration: none;
   
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
 ::-webkit-scrollbar {
   width: 10px;
 }
