--- a/src/styles/dropdownModal.css
+++ b/src/styles/dropdownModal.css
@@ -34,7 +34,7 @@ div.dropdown-options{
     border-radius: 5px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
     cursor: pointer;
-
+    z-index: 1000;
 
 }
 
