--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -1,7 +1,7 @@
 section.modal-background{
     position: fixed;
     height: 100%;
-    width: 100%;
+    width: 100%;    
     background-color: rgba(0, 0, 0, 0.397);
     z-index: 1000;
     cursor: pointer;
@@ -126,6 +126,32 @@ div.new-modal-button-container{
     margin-top: 30px;
 }
 
+/* *********************************************************** EDIT MODAL *********************************************************** */
+
+div.edit-modal-button-container{
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 30px;
+}
+
+button.modal-cancel-btn{
+    background-color: var( --add-button-background-color);
+    color: var(--add-button-text-color);
+    transition: all .3s;
+}
+
+
+button.modal-save-changes-btn{
+    margin-left: 15px;
+    background-color: #7C5DFA;
+    transition: all .3s;
+}
+
+button.modal-save-changes-btn:hover{
+    background-color: #9277FF;
+}
+
+
 button.modal-discard-btn{
     background-color: #d9dadf;
     color: #7E88C3;
@@ -158,8 +184,50 @@ button.modal-save-send-btn{
 }
 
 button.modal-save-send-btn:hover{
-    background-color: #9277FF;
 
 }
 
 
+/* *********************************************************** EDIT MODAL *********************************************************** */
+
+
+/* *********************************************************** Delete MODAL *********************************************************** */
+
+div.delete-container{
+    border-radius: 15px;
+    padding: 30px;
+    height: 240px;
+    width: 400px;
+    background-color: var(--background-main);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+div.delete-container h1 {
+    font-size: 30px;
+    margin-bottom: 10px;
+}
+
+div.delete-container p {
+    font-weight: 400;
+    color: var(--save-as-draft-button-text-color);
+}
+
+
+div.delete-container button {
+    margin-top: 30px;
+    margin-bottom: 10px;
+}
+
+div.delete-modal-btn-container {
+    display: flex;
+    justify-content: flex-end;
+}
+
+
+/* *********************************************************** Delete MODAL *********************************************************** */
