--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -261,18 +261,33 @@ div.invoice-item:hover{
 }
 
 p.invoice-id{
-width: 25%;
+width: 5%;
+font-weight: 800;
+font-size: 20;
+color: var(--text-color);
+}
+
+p.invoice-paymentdue{
+  color: var(--save-as-draft-button-text-color);
+  font-weight: 500;
+
+
 }
 
 p.invoice-client{
   width: 25%;
   text-align: left;
+  color: var(--save-as-draft-button-text-color);
+  font-weight: 500;
 
 }
 
 p.invoice-total{
   width: 10%;
   text-align: left;
+  font-weight: 800;
+font-size: 20;
+color: var(--text-color);
 }
 
 p.paid__status,
