--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -344,6 +344,28 @@ span.draft__span{
   background-color: var(--text-color-draft);
 }
 
+div.no-invoice-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+div.no-invoice-container h1{
+  text-align: center;
+  margin: 50px 0 40px 0;
+}
+
+div.no-invoice-container p{
+  width: 60%;
+  color: var(--save-as-draft-button-text-color);
+  text-align: center;
+
+}
 
 
 /* *************************************************HOME LAYOUT************************************************* */
