--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -33,11 +33,12 @@ input[type=number] {
 ::-webkit-scrollbar-thumb {
   background: grey; 
   border-radius: 10px;
+  transition: all .3s;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #b30000; 
+  background: #b8b8b8; 
 }
 
 body,
@@ -137,6 +138,15 @@ section.home-container{
   color: var(--text-color);
 }
 
+div.invoice-item-mobile{
+display: none;
+}
+
+div.info-bar-mobile{
+  display: none;
+}
+
+
 div.info-bar{
   display: flex;
   justify-content: space-around;
@@ -196,6 +206,8 @@ div.filter-options {
 div.filter-options label{
 font-weight: 600;
 margin-left: 10px;
+color: var(--text-color);
+cursor: pointer;
 }
 
 div.filter-option-check{
@@ -283,8 +295,8 @@ p.invoice-client{
 }
 
 p.invoice-total{
-  width: 10%;
-  text-align: left;
+  width: 12%;
+  text-align: right;
   font-weight: 800;
 font-size: 20;
 color: var(--text-color);
@@ -390,7 +402,7 @@ a.return-home-btn {
 }
 
 section.invoice-detail-information{
-  width: 65%;
+  width: 1008px;
   padding-top: 75px;
   padding-bottom: 75px;
 }
@@ -479,6 +491,7 @@ div.detail-payDue-billToAddr{
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 30px;
 }
 
 span.detail-id-hash{
@@ -590,3 +603,193 @@ p.total{
   font-weight: 600;
 }
 /* *************************************************Invoice Detail LAYOUT************************************************* */
+
+
+@media screen and (max-width: 1260px) {
+
+  div.invoice-item {
+    position: relative;
+    width: 800px;
+    height: 72px;
+    display: flex;
+    margin: auto;
+    align-items: center;
+    justify-content: space-around;
+    background-color: var(--background-secondary);
+    margin-top: 20px;
+    border-radius: 5px;
+    border: 1px solid var(--background-secondary);
+    cursor: pointer;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+    transition: all .3s;
+    color: var(--text-color);
+}
+
+
+}
+
+@media screen and (max-width: 1030px) {
+
+  div.invoice-item {
+    position: relative;
+    width: 672px;
+    height: 72px;
+    display: flex;
+    margin: auto;
+    align-items: center;
+    justify-content: space-around;
+    background-color: var(--background-secondary);
+    margin-top: 20px;
+    border-radius: 5px;
+    border: 1px solid var(--background-secondary);
+    cursor: pointer;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+    transition: all .3s;
+    color: var(--text-color);
+}
+
+div.info-bar {
+  display: flex;
+  justify-content: space-around;
+  margin: auto auto auto auto;
+  padding-top: 150px;
+}
+
+div.invoice-item{
+  display: none;
+}
+
+div.invoice-item-mobile{
+  position: relative;
+  width: 500px;
+  height: 130px;
+  display: flex;
+  margin: auto;
+  align-items: center;
+  justify-content: space-around;
+  background-color: var(--background-secondary);
+  margin-top: 20px;
+  border-radius: 5px;
+  border: 1px solid var(--background-secondary);
+  cursor: pointer;
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+  transition: all .3s;
+  color: var(--text-color);
+}
+
+
+p.invoice-id{
+  width: 100%;
+  }
+  
+  p.invoice-paymentdue{
+    color: var(--save-as-draft-button-text-color);
+    font-weight: 500;
+    margin: 20px 0 10px 0;
+  }
+  
+  p.invoice-client{
+    width: 100%;
+    text-align: right;
+    margin-bottom: 20px;
+  
+  }
+  
+  p.invoice-total{
+    width: 100%;
+    text-align: left;
+ 
+  }
+
+  div.no-invoice-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 70%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+}
+
+
+@media screen and (max-width: 680px) {
+  div.info-bar{
+    display: none;
+  }
+
+  div.invoice-filter{
+    position: relative;
+    margin-right: 40px;
+  }
+
+  div.info-bar-mobile{
+    display: flex;
+    justify-content: space-around;
+    margin: auto auto auto auto;
+    padding-top: 150px;  
+  }
+
+  span.filter-dropdown img{
+  margin-left: 10px;
+  }
+  
+  div.info-bar-mobile h1{
+    font-size: 32px;
+    
+  }
+
+  div.info-bar-mobile button {
+    position: relative;
+    height: 48px;
+    width: 100px;
+    border: 0;
+    outline: 0;
+    border-radius: 30px;
+    color: white;
+    font-size: 1rem;
+    font-weight: 600;
+    background-color: #7C5DFA;
+    transition: all .3s;
+    cursor: pointer;
+    text-align: end;
+    padding: 0 15px 0 0;
+  }
+  
+  div.info-bar-mobile button:hover{
+    background-color: #9277FF;
+  }
+  
+  div.info-bar-mobile button:hover .icon-plus {
+    fill: #9277FF;
+  }
+}
+
+
+
+@media screen and (max-width: 550px) {
+
+
+
+div.invoice-item-mobile{
+  position: relative;
+  width: 340px;
+  height: 130px;
+  display: flex;
+  margin: auto;
+  align-items: center;
+  justify-content: space-around;
+  background-color: var(--background-secondary);
+  margin-top: 20px;
+  border-radius: 5px;
+  border: 1px solid var(--background-secondary);
+  cursor: pointer;
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+  transition: all .3s;
+  color: var(--text-color);
+}
+
+
+
+}
