--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,3 +1,5 @@
+
+
 section.navbar{
     position: fixed;
     background-color: var(--background-nav);
@@ -79,3 +81,54 @@ div.theme-switcher {
     cursor: pointer;
 
 }
+
+@media screen and (max-width: 1030px) {
+
+    section.navbar {
+        position: fixed;
+        background-color: var(--background-nav);
+        height: 80px;
+        width: 100%;
+        border-radius: 0 0px 0px 0;
+        z-index: 1002;
+    }
+  
+    div.navbar-content {
+        height: 100%;
+        position: relative;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    div.nav-logo {
+        position: relative;
+        width: 80px;
+        height: 100%;
+        background-color: #7C5DFA;
+        border-radius: 0 20px 20px 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    div.theme-switcher {
+        position: absolute;
+        height: fit-content;
+        bottom: 28px;
+        right: 130px;
+        width: fit-content;
+        cursor: pointer;
+    }
+
+    div.user-avi {
+        height: 100%;
+        width: 80px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-top: 0;
+        border-left: 1px solid #979797;
+
+    }
+  }
