--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -393,6 +393,17 @@ main.invoice-detail-container{
   color: var(--text-color);
 
 
+
+}
+
+div.mobile-button-container{
+display: none;
+}
+
+div.sent-to-mobile{
+  display: none;
+}
+
 a.return-home-btn {
   color: var(--text-color);
   font-weight: 600;
@@ -405,7 +416,6 @@ section.invoice-detail-information{
   width: 1008px;
   padding-top: 75px;
   padding-bottom: 75px;
-}
 }
 
 div.detail-status-info-bar{
@@ -477,13 +487,14 @@ div.detail-id-desc-billfrom{
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 30px;
 }
 
 div.detail-invDate-billToName-billToEmail{
   width: 65%;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: baseline;
 }
 
 div.detail-payDue-billToAddr{
@@ -505,6 +516,10 @@ p.primary{
 
 p.detail-info{
   margin: 7px 0 7px 0;
+}
+
+p.detail-head{
+  margin-bottom: 10px;
 }
 
 p.secondary{
@@ -554,6 +569,11 @@ div.item-row{
   position: relative;
   font-size: 20px;
   margin-top: 15px;
+}
+
+div.item-row-mobile{
+  display: none;
+
 }
 
 p.item-name{
@@ -625,6 +645,23 @@ p.total{
     color: var(--text-color);
 }
 
+section.invoice-detail-information{
+  width: 800px;
+  padding-top: 75px;
+  padding-bottom: 75px;
+}
+
+p.item-header-qty{
+  position: absolute;
+  right: 395px;
+}
+
+p.item-quantity {
+  position: absolute;
+  right: 409px;
+  font-size: 20px;
+  font-weight: 800;
+}
 
 }
 
@@ -711,6 +748,51 @@ p.invoice-id{
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+a.return-home-btn {
+  color: var(--text-color);
+  font-weight: 600;
+  font-size: 18px;
+  position: absolute;
+  top: 135px;
+}
+
+section.invoice-detail-information {
+  width: 660px;
+  padding-top: 175px;
+  padding-bottom: 75px;
+}
+
+div.detail-invDate-billToName-billToEmail {
+  width: 85%;
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+}
+
+p.item-quantity {
+  position: absolute;
+  right: 288px;
+  font-size: 20px;
+  font-weight: 800;
+}
+
+p.item-price {
+  position: absolute;
+  right: 160px;
+  font-size: 20px;
+  font-weight: 800;
+}
+
+p.item-header-price {
+  position: absolute;
+  right: 160px;
+}
+
+p.item-header-qty {
+  position: absolute;
+  right: 274px;
+}
 }
 
 
@@ -740,6 +822,19 @@ p.invoice-id{
     
   }
 
+  section.invoice-detail-information {
+    width: 90%;
+    padding-top: 175px;
+    padding-bottom: 175px;
+}
+
+div.detail-status-info {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
   div.info-bar-mobile button {
     position: relative;
     height: 48px;
@@ -764,13 +859,122 @@ p.invoice-id{
   div.info-bar-mobile button:hover .icon-plus {
     fill: #9277FF;
   }
+
+  div.detail-status-button-container{
+    display: none;
+  }
+
+  div.detail-id-desc-billfrom {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    flex-direction: column;
+}
+
+div.sent-to-desktop{
+  display: none;
+}
+
+div.sent-to-mobile{
+  display: block;
+}
+
+div.item-header{
+  display: none;
+}
+
+div.item-row{
+  display: none;
+
+}
+
+div.item-row-mobile {
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+p.item-quantity{
+  position: relative;
+  right: 0;
+  font-size: 16px;
+  font-weight: 800;
+
+
+}
+
+p.item-name{
+  font-size: 16px;
+  right: 0;
+  font-weight: 800;
+
+}
+
+p.item-price{
+  position: relative;
+  right: 0;
+  font-size: 16px;
+  font-weight: 800;
+
+}
+
+p.item-total{
+  position: relative;
+  right: 0;
+  font-size: 16px;
+  font-weight: 800;
+
+}
+
+p.item-header-total{
+  position: relative;
+  right: 0;
+}
+
+p.item-header-price{
+  position: relative;
+  right: 0;
+}
+
+p.item-header-qty{
+  position: relative;
+  right: 0;
+}
+
+div.mobile-quantity-price{
+  width: 70%;
+  display: flex;
+  justify-content: space-between;
+}
+
+div.mobile-item-row-info{
+  width: 150px;
+}
+
+div.mobile-button-container{
+  width: 100%;
+  height: 100px;
+  display: flex;
+  position: fixed;
+  justify-content: center;
+  padding: 20px;
+  background: var(--background-main);
+  bottom: 0;
+  left: 0;
+  border-radius: 15px 15px 0 0;
+}
 }
 
 
 
 @media screen and (max-width: 550px) {
 
-
+  div.mobile-item-row-info{
+    width: 100px;
+  }
 
 div.invoice-item-mobile{
   position: relative;
@@ -790,6 +994,37 @@ div.invoice-item-mobile{
   color: var(--text-color);
 }
 
+p.item-quantity{
+  position: relative;
+  right: 0;
+  font-size: 12px;
+  font-weight: 800;
 
 
+}
+
+p.item-price{
+  position: relative;
+  right: 0;
+  font-size: 12px;
+  font-weight: 800;
+
+}
+
+p.item-total{
+  position: relative;
+  right: 0;
+  font-size: 12px;
+  font-weight: 800;
+
+}
+
+p.total{
+  font-size: 26px;
+}
+
+div.sent-to-mobile {
+  display: block;
+  margin-top: 85px;
+}
 }
