--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -231,3 +231,32 @@ div.delete-modal-btn-container {
 
 
 /* *********************************************************** Delete MODAL *********************************************************** */
+
+
+@media screen and (max-width: 1030px) {
+    section.modal-background {
+        position: fixed;
+        top: 78px;
+        height: 100%;
+        width: 100%;
+        background-color: rgba(0, 0, 0, 0.397);
+        z-index: 1000;
+        cursor: pointer;
+    }
+
+    div.modal-new-container {
+        height: 100%;
+        width: 580px;
+        border-radius: 0px 20px 20px 0;
+        background-color: var(--background-main);
+        z-index: 1001;
+        cursor: auto;
+    }
+
+    div.new-form-container {
+        width: 100%;
+        height: 100%;
+        padding: 50px 40px 120px 50px;
+        overflow: auto;
+    }
+}
