--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -22,6 +22,10 @@ label{
     color: var(--modal-color-label);
 }
 
+div.new-modal-button-container-mobile {
+    display: none;
+}
+
 div.modal-new-container{
     height: 100%;
     width: 680px;
@@ -258,5 +262,62 @@ div.delete-modal-btn-container {
         height: 100%;
         padding: 50px 40px 120px 50px;
         overflow: auto;
+    }
+}
+
+
+@media screen and (max-width: 680px) {
+    div.new-form-container {
+        width: 100%;
+        height: 100%;
+        padding: 50px 40px 220px 50px;
+        overflow: auto;
+    }
+
+    div.new-modal-button-container-mobile {
+    
+            width: 100%;
+            position: sticky;
+            bottom: 0;
+            display: flex;
+            justify-content: center;
+            padding: 30px;
+            background-color: var(--background-main);
+            border-radius: 15px 15px 0 0;
+    
+    }
+
+    div.edit-modal-button-container-mobile {
+    
+        width: 100%;
+        position: sticky;
+        bottom: 0;
+        display: flex;
+        justify-content: center;
+        padding: 30px;
+        background-color: var(--background-main);
+        border-radius: 15px 15px 0 0;
+
+}
+
+    div.modal-new-container {
+        height: 100%;
+        width: 100%;
+        border-radius: 0px 0px 0px 0;
+        background-color: var(--background-main);
+        z-index: 1001;
+        cursor: auto;
+    }
+
+    div.new-modal-button-container,
+    div.edit-modal-button-container{
+        display: none;
+    }
+
+    button.modal-save-draft-btn{
+        background-color: #373B53;
+        color: var(--save-as-draft-button-text-color);
+        margin: 0 10px 0 10px;
+        transition: all .3s;
     }
 }
