--- a/src/styles/calender.css
+++ b/src/styles/calender.css
@@ -210,3 +210,12 @@ img.calendar-icon{
         opacity: 1;
     }
 }
+
+
+@media screen and (max-width: 680px) {
+
+    .calendar-toggle{
+        width: 100%;
+        margin: 20px 0 20px 0; 
+    }
+}
